08_jsp/test/error/e404.jsp
<%@ page language="java" contentType="text/html; charset=UTF-8"
    pageEncoding="UTF-8"%>
<!DOCTYPE html>
<html>
<head>
<meta charset="UTF-8">
<title>404 오류 페이지</title>
</head>
<body>
<h1>요청한 파일은 서버 내부에 존재하지 않습니다. URL을 확인해보세요!</h1>
<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuKg5mjaUMQmKFyyT2h8Tiftx3iTqOfcgoW2AKrDjICVplZAUg4oWxub8lf0V_XTwKUSA&usqp=CAU">
</body>
</html>